compile_box/API/temp/ccfc1bef565229289146/errors
/usercode/file.java:1: error: unclosed character literal
print 'Hello 222!'
      ^
/usercode/file.java:1: error: unclosed character literal
print 'Hello 222!'
                 ^
2 errors
